<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cloid</string>
    <string name="title">Cloud Storage</string>
    
    <!-- AZURE configuration direct -->    
    <string name="azure">Azure Cloud Storage</string>  
    <string name="azure_direct_account_name">cloid</string>
    <string name="azure_direct_access_key">Nycre+C4vdKZhFXfKaEsI82Zsby1bFNRmznvjLc4U5g2VTkePWVW2lUHQLC+p9TF12BKoznlMndtCP90PzdWag==</string>   
    <string name="azure_container">pictures</string>
    <string name="txt_acct_name">Account name</string>
    <string name="txt_access_key">Access Key</string>
    <string name="txt_container">Container</string>

    
    <string name="btn_set">Cloud Settings</string>
    <string name="use_mock">Mock Storage</string>
    <string name="toggle_turn_on">Cloud ON</string>
    <string name="toggle_turn_off">Cloud OFF</string>
    <string name="use_mock_storage">Will use Mock Storage</string>
    <string name="using_mock_storage">Using Mock Storage (Settings)</string>
    <string name="settings_saved">Settings saved in Preferences</string>
    <string name="btn_put">Save in Cloud</string>
    <string name="btn_get">Get from Cloud</string>
    <string name="chooser">Choose Image</string>
    <string name="back_main">Back to Main</string>
    <string name="storing">Processing&#8230;</string>
    <string name="stop">Abort Operation</string>
    <string name="name">Cloud Provider</string>
    <string name="url">Cloud Provider URL</string>
    <string name="account">Account Name</string>
    <string name="password">Password or Key</string>
    <string name="check_settings">Verify Settings and Try Again</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="download_name">File: </string>
    <string name="download">Download</string>
    <string name="browse">Browse Storage</string>
    <string name="browse_msg">Click Item to Process</string>
    <string name="img_db_error">Unable to access Image Database</string>
    <string name="go_gallery">Go to Gallery</string>
    
    <string name="no_op">Operation not supported</string>    
    <string name="uploading">Uploading&#8230;</string>
    <string name="browsing">Getting Storage List&#8230;</string>
    <string name="retrieving">Retrieving&#8230;</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="stopping">Stopping&#8230;</string>
    
    <string name="status">Status: </string>
    <string name="delete_confirm">Delete  %1$s?\nPlease confirm.</string>
    <string name="gallery">View Gallery</string>
    <string name="error">FAILURE</string>
    <string name="success">DONE</string>
    
    <string name="prefs">Settings</string>
    <string name="cloud_prefs">Cloud Settings</string>
    <string name="push_prefs">Push Settings</string>
    
    <!-- GCM  -->
     <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">PUSH Notifications: \nDevice is already registered.</string>
    <string name="gcm_registered">PUSH Notifications:  \nDevice successfully registered!</string>
    <string name="gcm_unregistered">PUSH Notifications:  \nDevice successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">PUSH Notifications:  \nerror (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM:  \nrecoverable error (%1$s).</string>
    <string name="gcm_deleted">PUSH Notifications:  \nserver deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Server.</string>
    <string name="server_registered">From Server: successfully added device!</string>
    <string name="server_unregistered">From Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Server (%1$s).</string>
    
</resources>
