<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="horizontal"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="30sp"
                   android:layout_marginBottom="10sp">
            
           <Button android:id="@+id/save"
                   style="@style/btnSettings"
                   android:text="@string/save"
                   android:onClick="save"/>
            
               <ToggleButton
                  android:id="@+id/toggleStorage"
                  android:layout_marginLeft="25sp"
                  style="@style/btnSettings"
                  android:textOn="@string/toggle_turn_on"
                  android:textOff="@string/toggle_turn_off"
                  android:onClick="onOff"/>
</LinearLayout>