<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/retrieve"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal|center_vertical"
              android:orientation="vertical"
              android:padding="10dp"
              android:layout_marginRight="5dp"
              android:layout_marginLeft="5dp">

        <TextView  android:textColor="@color/android:black"
                  android:id="@+id/downloadName"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:textSize="16sp"
                  android:layout_marginTop="10sp"
                  android:layout_marginBottom="180sp"
                  android:layout_marginLeft="10sp"/>
  
    
    <LinearLayout      android:orientation="horizontal"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">

               <Button android:id="@+id/cancel"
                       style="@style/btnOp"
                       android:text="@string/close"
                       android:onClick="close"/>

               <Button android:id="@+id/download"
                       style="@style/btnOp"
                       android:text="@string/download"
                       android:onClick="download"/>               
           
               <Button android:id="@+id/delete"
                       style="@style/btnOp"
                       android:text="@string/delete"
                       android:onClick="delete"/>
            
          </LinearLayout>
          
    <TextView  android:textColor="@color/android:black"
            android:textSize="16dp"
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_gravity="bottom|center"
            android:layout_marginRight="2dp"
            android:layout_weight="0.2"
            android:clickable="true"
            android:onClick="goToGallery"
            android:padding="15dip"
            android:text="@string/go_gallery" />
       
     
 </LinearLayout>