<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/dialog_confirm"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingTop="100dp"
              android:paddingBottom="100dp">

    <TextView   android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/delete_confirm"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>
    
    <LinearLayout  android:layout_gravity="center_vertical|center_horizontal"
                   android:orientation="horizontal"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="30sp"
                   android:layout_marginRight="5dp"
                   android:layout_marginLeft="35dp"
                   android:layout_marginBottom="10sp">
                   
        <Button android:id="@+id/btnCancel"
                    style="@style/btnDialog"
                    android:text="@string/cancel"               
                    android:onClick="cancel"/>


         <Button android:id="@+id/btnDelete"
                    style="@style/btnDialog"
                    android:text="@string/delete"                 
                    android:onClick="delete"/>
    </LinearLayout>

</LinearLayout>